fix: correct script src to main.jsx

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       <p id="status"></p>
     </form>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
