--- a/index.html
+++ b/index.html
@@ -3,34 +3,88 @@
   <head>
     <meta charset="UTF-8" />
     <title>EditX Upload</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
-        font-family: sans-serif;
-        padding: 2em;
-        background: #f0f0f0;
+        font-family: Arial, sans-serif;
+        max-width: 600px;
+        margin: 60px auto;
+        padding: 20px;
+        background: #f9f9f9;
+        border-radius: 12px;
+        box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
       }
-      form {
-        background: #fff;
-        padding: 2em;
-        border-radius: 8px;
-        max-width: 400px;
-        margin: auto;
+      h1 {
+        font-size: 24px;
+        margin-bottom: 24px;
       }
-      input,
+      input[type="file"] {
+        margin-bottom: 16px;
+      }
       button {
-        display: block;
-        margin-top: 1em;
-        width: 100%;
+        padding: 10px 16px;
+        font-size: 16px;
+        background: #333;
+        color: #fff;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+      }
+      button:hover {
+        background: #555;
+      }
+      #status {
+        margin-top: 24px;
       }
     </style>
   </head>
   <body>
-    <form id="uploadForm" enctype="multipart/form-data" method="POST">
-      <input type="file" name="files" multiple />
+    <h1>Upload Videos to EditX</h1>
+    <form id="uploadForm">
+      <input type="file" id="fileInput" name="files" multiple required />
+      <br />
       <button type="submit">Upload</button>
-    </form>    
     </form>
+    <div id="status"></div>
 
-    <script type="module" src="/src/main.jsx"></script>
+    <script>
+      const uploadForm = document.getElementById("uploadForm");
+      const fileInput = document.getElementById("fileInput");
+      const statusDiv = document.getElementById("status");
+
+      uploadForm.onsubmit = async (e) => {
+        e.preventDefault();
+        const files = fileInput.files;
+
+        if (!files.length) {
+          alert("Please select at least one video file.");
+          return;
+        }
+
+        const formData = new FormData();
+        for (let file of files) {
+          formData.append("files", file);
+        }
+
+        statusDiv.textContent = "Uploading...";
+        try {
+          const response = await fetch("https://editx-backend.onrender.com/upload", {
+            method: "POST",
+            body: formData,
+          });
+
+          const result = await response.json();
+          if (result.sessionId) {
+            statusDiv.innerHTML = `✅ Uploaded! <br/> <a href="https://editx-frontend.onrender.com/preview/${result.sessionId}">View Preview</a>`;
+          } else {
+            statusDiv.textContent = "❌ Upload failed.";
+            console.error(result);
+          }
+        } catch (err) {
+          statusDiv.textContent = "❌ Upload error. Check console.";
+          console.error(err);
+        }
+      };
+    </script>
   </body>
 </html>
